# agent-world

./: .claude.json  .gitignore  CLAUDE.md  LICENSE  README.md  test_viewport_capture_api.py
agentworld-core/: README.md  pyproject.toml
agentworld-core/src/agentworld_core/: __init__.py  agent-world-config.json  agent-world-http.json  asset_security.py  auth.py  config.py  http.py  logging.py  metrics.py  requests.py  subprocess_security.py  validation.py  versions.py
agentworld-extensions/: MANIFEST.in  agent-world-config.json  agent-world-http.json  agent-world-security.json  agent-world-versions.json  agent_world_asset_security.py  agent_world_auth.py  agent_world_config.py  agent_world_http.py  agent_world_logging.py  agent_world_metrics.py  agent_world_subprocess_security.py  agent_world_transport.py  agent_world_validation.py  agent_world_versions.py  pyproject.toml
agentworld-extensions/agent.world.core/config/: extension.toml
agentworld-extensions/agent.world.core/python/: agentworld_core
agentworld-extensions/docs/dev_docs/: code_review_action_plan.md  comprehensive_code_review_report.md  critical_issues_ecosystem.md  current_session_status.md
agentworld-extensions/omni.agent.worldbuilder/config/: extension.toml
agentworld-extensions/omni.agent.worldbuilder/docs/: CHANGELOG.md  README.md
agentworld-extensions/omni.agent.worldbuilder/docs/dev_docs/: worldbuilder_modularization_gameplan.md  worldbuilder_vs_worldviewer_comparison.md
agentworld-extensions/omni.agent.worldbuilder/omni/: __init__.py
agentworld-extensions/omni.agent.worldbuilder/omni/agent/: __init__.py
agentworld-extensions/omni.agent.worldbuilder/omni/agent/worldbuilder/: __init__.py  api_interface.py  bounds_calculator.py  config.py  errors.py  extension.py  http_api_interface.py  http_handler.py  openapi_spec.py  scene_builder.py  security.py  utils.py  worldbuilder_config.json
agentworld-extensions/omni.agent.worldbuilder/omni/agent/worldbuilder/config/: __init__.py  loader.py
agentworld-extensions/omni.agent.worldbuilder/omni/agent/worldbuilder/http/: __init__.py  controller.py  schemas.py
agentworld-extensions/omni.agent.worldbuilder/omni/agent/worldbuilder/scene/: __init__.py  asset_manager.py  batch_manager.py  cleanup_operations.py  element_factory.py  queue_manager.py  scene_types.py
agentworld-extensions/omni.agent.worldbuilder/omni/agent/worldbuilder/services/: __init__.py  worldbuilder_service.py
agentworld-extensions/omni.agent.worldrecorder/config/: extension.toml
agentworld-extensions/omni.agent.worldrecorder/docs/: CHANGELOG.md  README.md
agentworld-extensions/omni.agent.worldrecorder/omni/agent/worldrecorder/: __init__.py  api_interface.py  config.py  errors.py  extension.py  http_api_interface.py  http_handler.py  openapi_spec.py  security.py
agentworld-extensions/omni.agent.worldstreamer.rtmp/config/: extension.toml
agentworld-extensions/omni.agent.worldstreamer.rtmp/docs/: CHANGELOG.md  README.md
agentworld-extensions/omni.agent.worldstreamer.rtmp/omni/: __init__.py
agentworld-extensions/omni.agent.worldstreamer.rtmp/omni/agent/worldstreamer/: __init__.py
agentworld-extensions/omni.agent.worldstreamer.srt/config/: extension.toml
agentworld-extensions/omni.agent.worldstreamer.srt/docs/: CHANGELOG.md  README.md
agentworld-extensions/omni.agent.worldstreamer.srt/omni/agent/: __init__.py
agentworld-extensions/omni.agent.worldsurveyor/config/: extension.toml
agentworld-extensions/omni.agent.worldsurveyor/docs/: CHANGELOG.md  README.md
agentworld-extensions/omni.agent.worldsurveyor/docs/dev_docs/: code_review_roadmap.md
agentworld-extensions/omni.agent.worldsurveyor/omni/: __init__.py
agentworld-extensions/omni.agent.worldsurveyor/omni/agent/: __init__.py
agentworld-extensions/omni.agent.worldsurveyor/omni/agent/worldsurveyor/: __init__.py  api_interface.py  config.py  errors.py  extension.py  http_api_interface.py  http_handler.py  marker_manager.py  models.py  openapi_spec.py  security.py  waypoint_database.py  waypoint_manager.py  waypoint_toolbar.py
agentworld-extensions/omni.agent.worldviewer/config/: extension.toml
agentworld-extensions/omni.agent.worldviewer/docs/: CHANGELOG.md  README.md
agentworld-extensions/omni.agent.worldviewer/docs/dev_docs/: worldviewer_modularization_pattern.md
agentworld-extensions/omni.agent.worldviewer/omni/: __init__.py
agentworld-extensions/omni.agent.worldviewer/omni/agent/: __init__.py
agentworld-extensions/omni.agent.worldviewer/omni/agent/worldviewer/: __init__.py  api_interface.py  camera_controller.py  cinematic_controller_sync.py  config.py  errors.py  extension.py  http_api_interface.py  http_handler.py  openapi_spec.py  security.py  worldviewer_config.json
agentworld-extensions/tests/: conftest.py  test_asset_security.py  test_input_validation.py  test_security_headers.py  test_subprocess_security.py
agentworld-extensions/tests/worldbuilder/: test_queue_manager.py  test_transport_contract.py  test_worldbuilder_service.py
agentworld-extensions/tests/worldrecorder/: test_worldrecorder_controller.py
agentworld-extensions/tests/worldstreamer/: test_worldstreamer_controller.py
agentworld-extensions/tests/worldsurveyor/: test_worldsurveyor_controller.py  test_worldsurveyor_transport_contract.py
agentworld-extensions/tests/worldviewer/: test_worldviewer_controller.py
docker/mcp-servers/desktop-screenshot/: pyproject.toml
docker/mcp-servers/desktop-screenshot/src/: mcp_screenshot_server.py  screenshot_manager.py  window_detector.py
docker/mcp-servers/tools/mcpctl/: mcpctl.py  pyproject.toml
mcp-servers/worldbuilder/: pyproject.toml  requirements.txt
mcp-servers/worldbuilder/src/: config.py  main.py  mcp_agent_worldbuilder.py  server_stdio.py
mcp-servers/worldbuilder/src/tools/: __init__.py  assets.py  elements.py  system.py
mcp-servers/worldstreamer/: pyproject.toml
mcp-servers/worldstreamer/src/: client.py  config.py  main.py  mcp_agent_worldstreamer.py  server_stdio.py
mcp-servers/worldstreamer/src/tools/: __init__.py  streaming.py  system.py
(+251 files in other folders)
